# market_aggregator

./: Cargo.toml  README.md  build.rs
config/: config.yaml
proto/: aggregator.proto
src/: client.rs  config.rs  main.rs  orderbook.rs  server.rs
src/apitree/: mod.rs  restapi.rs  wsapi.rs
src/proto/: mod.rs  orderbook.rs
