[package]
name = "market_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.1"
actix-web = "4.3.1"
anyhow = "1.0.72"
awc = { version = "3.1.1", features = ["rustls"] }
bigdecimal = "0.4.1"
fern = "0.6.2"
formatx = "0.2.1"
futures-util = "0.3.28"
log = "0.4.19"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.181", features = ["std", "serde_derive", "derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
