[package]
name = "market_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.1"
actix-http = "3.3.1"
actix-web = "4.3.1"
anyhow = "1.0.72"
awc = { version = "3.1.1", features = ["rustls"] }
bigdecimal = "0.4.1"
clap = { version = "4.3.21", features = ["derive"] }
fern = "0.6.2"
formatx = "0.2.1"
futures-util = "0.3.28"
log = "0.4.19"
phf = { version = "0.11.2", features = ["macros"] }
prost = "0.11.9"
serde = { version = "1.0.181", features = ["std", "serde_derive", "derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.8"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
